# not-human

./: .gitignore  PLAN.md  README.md  pyproject.toml
examples/: demo_client.py  demo_server.py  fastapi_example.py  flask_example.py
src/anticaptcha/: __init__.py  challenge.py  cli.py  client.py  request_handler.py  server.py  verifiers.py
tests/: test_verifiers.py
