[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "anti-captcha"
version = "0.1.0"
description = "The first CAPTCHA for bots. Prove you're not human."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Andres Marafioti" }]
keywords = ["captcha", "bot", "verification", "agents", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "black",
    "ruff",
]
server = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.24.0",
]
examples = [
    "anticaptcha[server]",
]

[project.scripts]
anticaptcha = "anticaptcha.cli:main"

[project.urls]
Homepage = "https://github.com/andimarafioti/anti-captcha"
Repository = "https://github.com/andimarafioti/anti-captcha"
Issues = "https://github.com/andimarafioti/anti-captcha/issues"

[tool.setuptools.packages.find]
where = ["src"]
include = ["anticaptcha*"]
